begin add validation of form

--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
             </div>
             <div class="contact-region-wrapper">
                 <div class="contact-region-wrapper-form">
-                    <form action="">
-                        <div><input type="name" name="senderName" required placeholder="Your Name..."></input></div>
-                        <div><input type="email" name="mail" required placeholder="Your Email Adress..."></input></div>
-                        <div><textarea name="messageText" required placeholder="Your Message..."></textarea></div>
+                    <form action="#" name="sendMessage">
+                        <div><input type="name" name="senderName" class="field" placeholder="Your Name..."></input></div>
+                        <div><input type="email" name="mail" class="field" placeholder="Your Email Adress..."></input></div>
+                        <div><textarea name="messageText" class="field" placeholder="Your Message..."></textarea></div>
                         <div><button type="submit">
                                 <h4>Send Message</h4>
                             </button></div>
